src/style/global.css
/*? global clearing */
*,
html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  text-decoration: none;
  font-family:
    system-ui,
    -apple-system,
    BlinkMacSystemFont,
    "Segoe UI",
    Roboto,
    Oxygen,
    Ubuntu,
    Cantarell,
    "Open Sans",
    "Helvetica Neue",
    sans-serif;
}

:root {
  --color-black-primary: rgba(0, 0, 0, 0.8);
  --color-black-secondary: rgba(0, 0, 0, 0.3);
}

body {
  height: 100vh;
  display: flex;
  flex-direction: column;
}

header {
  height: 50px;
  width: 100%;
  display: flex;
  justify-content: end;
  font-weight: 500;
  position: fixed;
}

.header-right {
  display: flex;
  padding: 10px 20px;
}

.header-right a {
  margin-right: 10px;
  color: var(--color-black-primary);
}

.header-right a:hover {
  text-decoration: underline;
}

main {
  display: flex;
  justify-content: center;
  align-items: center;
  height: 100%;
}

.feature {
  display: flex;
  align-items: center;
  flex-direction: column;
  width: 100%;
}

.feature img {
  width: 250px;
  height: auto;
  object-fit: cover;
}

.search {
  padding: 20px;
  width: 50%;
  display: flex;
  flex-direction: column;
  gap: 20px;
}

.search-input {
  display: flex;
  align-items: center;
  width: 100%;
  padding: 0 16px;
  border-radius: 99px;
  border: 1px solid var(--color-black-secondary);
}

.search-input:hover {
  box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.2);
  -webkit-box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.2);
  -moz-box-shadow: 0px 0px 12px 1px rgba(0, 0, 0, 0.2);
}

.search-input input {
  flex: 1;
  width: 100%;
  padding: 10px;
  font-size: 18px;
  margin-bottom: 3px;
  border: none;
  outline: none;
}

.search-input .cari {
  cursor: pointer;
}

.search-input .photo {
  cursor: pointer;
}

.search-action {
  display: flex;
  justify-content: center;
  gap: 15px;
}

.search-action button {
  border: 1px solid transparent;
  padding: 7px 12px;
  border-radius: 6px;
  cursor: pointer;
}

.search-action button:hover {
  border: 1px solid var(--color-black-secondary);
}

.language {
  display: flex;
  justify-content: center;
  font-size: 14px;
  color: var(--color-black-primary);
}

.language a {
  margin-left: 4px;
}

/*Laptop*/
@media (max-width: 992px) {
  .search {
    width: 60%;
  }
}

/*Tab*/
@media (max-width: 768px) {
  .search {
    width: 80%;
  }
  .search-input input {
    padding: 8px;
  }
}

/*Mobile*/
@media (max-width: 576px) {
  .header-right {
    display: flex;
  }
  .search {
    width: 100%;
  }
  .search-input input {
    padding: 5px;
  }
  .language div {
    font-size: 12px;
  }
}

